--- a/DAY2/pokedex/package.json
+++ b/DAY2/pokedex/package.json
@@ -39,8 +39,11 @@
     "@nguniversal/builders": "^15.2.0",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^14.15.0",
     "jasmine-core": "~4.5.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
