--- a/DAY2/pokedex/package.json
+++ b/DAY2/pokedex/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest",
     "dev:ssr": "ng run pokedex-angular:serve-ssr",
     "serve:ssr": "node dist/pokedex-angular/server/main.js",
     "build:ssr": "ng build && ng run pokedex-angular:server",
